--- a/src/app/CHAOS.MCM/App.Config.sample
+++ b/src/app/CHAOS.MCM/App.Config.sample
@@ -1,10 +1,14 @@
 <?xml version="1.0"?>
 <configuration>
-  <connectionStrings>
-    <add name="MCMEntities" 
-         connectionString="metadata=res://*/Data.EF.MCM.csdl|res://*/Data.EF.MCM.ssdl|res://*/Data.EF.MCM.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=;user id=;password=;persist security info=True;database=MCM&quot;" 
-         providerName="System.Data.EntityClient"/>
-  </connectionStrings>
+	<connectionStrings>
+		<add name="MCMEntities"
+			 connectionString="metadata=res://*/Data.EF.MCM.csdl|res://*/Data.EF.MCM.ssdl|res://*/Data.EF.MCM.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=;user id=;password=;persist security info=True;database=MCM&quot;"
+			 providerName="System.Data.EntityClient"/>
+	</connectionStrings>
+  <appSettings>
+	  <add key="AWSKey" value="MyKey"/>
+	  <add key="AWSSecret" value="MySecret"/>
+  </appSettings>
   <startup>
     <supportedRuntime version="v4.0" 
                       sku=".NETFramework,Version=v4.5"/>
