- moved the v6 extensions into their own namesace - Started the download extension.

--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -117,24 +117,25 @@
     <Compile Include="Exception\FolderNotEmptyException.cs" />
     <Compile Include="Exception\InvalidRevisionException.cs" />
     <Compile Include="Exception\ObjectRelationAlreadyExistException.cs" />
-    <Compile Include="Extension\AMcmExtension.cs" />
-    <Compile Include="Extension\AMcmExtensionWithConfiguration.cs" />
-    <Compile Include="Extension\Destination.cs" />
     <Compile Include="Extension\Domain\ObjectExtensions.cs" />
-    <Compile Include="Extension\File.cs" />
-    <Compile Include="Extension\Folder.cs" />
-    <Compile Include="Extension\Format.cs" />
-    <Compile Include="Extension\Link.cs" />
-    <Compile Include="Extension\Mcm.cs" />
-    <Compile Include="Extension\Metadata.cs" />
-    <Compile Include="Extension\MetadataSchema.cs" />
-    <Compile Include="Extension\Object.cs" />
-    <Compile Include="Extension\ObjectRelation.cs" />
-    <Compile Include="Extension\ObjectType.cs" />
-    <Compile Include="Extension\Trace.cs" />
-    <Compile Include="Extension\UserManagement.cs" />
-    <Compile Include="Extension\UserProfile.cs" />
+    <Compile Include="Extension\v5\Download.cs" />
     <Compile Include="Extension\v5\Object.cs" />
+    <Compile Include="Extension\v6\AMcmExtension.cs" />
+    <Compile Include="Extension\v6\AMcmExtensionWithConfiguration.cs" />
+    <Compile Include="Extension\v6\Destination.cs" />
+    <Compile Include="Extension\v6\File.cs" />
+    <Compile Include="Extension\v6\Folder.cs" />
+    <Compile Include="Extension\v6\Format.cs" />
+    <Compile Include="Extension\v6\Link.cs" />
+    <Compile Include="Extension\v6\Mcm.cs" />
+    <Compile Include="Extension\v6\Metadata.cs" />
+    <Compile Include="Extension\v6\MetadataSchema.cs" />
+    <Compile Include="Extension\v6\Object.cs" />
+    <Compile Include="Extension\v6\ObjectRelation.cs" />
+    <Compile Include="Extension\v6\ObjectType.cs" />
+    <Compile Include="Extension\v6\Trace.cs" />
+    <Compile Include="Extension\v6\UserManagement.cs" />
+    <Compile Include="Extension\v6\UserProfile.cs" />
     <Compile Include="IMcmModule.cs" />
     <Compile Include="McmModule.cs" />
     <Compile Include="Permission\AccessPointPermission.cs" />
