--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -33,6 +33,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AWSSDK, Version=1.5.5.1, Culture=neutral, PublicKeyToken=cd2d24cd2bace800, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\AWSSDK.dll</HintPath>
+    </Reference>
     <Reference Include="CHAOS, Version=1.0.4687.26568, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\CHAOS.dll</HintPath>
@@ -55,6 +59,8 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\AwsConfiguration.cs" />
+    <Compile Include="Configuration\McmModuleConfiguration.cs" />
     <Compile Include="Data\Configuration\UserManagementConfiguration.cs" />
     <Compile Include="Data\Configuration\UserProfileConfiguration.cs" />
     <Compile Include="Data\Dto\AccessPoint.cs" />
@@ -118,7 +124,10 @@
     <Compile Include="Exception\InvalidRevisionException.cs" />
     <Compile Include="Exception\ObjectRelationAlreadyExistException.cs" />
     <Compile Include="Extension\Domain\ObjectExtensions.cs" />
-    <Compile Include="Extension\v5\Download.cs" />
+    <Compile Include="Extension\v5\Download\BucketInfo.cs" />
+    <Compile Include="Extension\v5\Download\Download.cs" />
+    <Compile Include="Extension\v5\Download\IDownloadStrategy.cs" />
+    <Compile Include="Extension\v5\Download\S3DownloadStrategy.cs" />
     <Compile Include="Extension\v5\Object.cs" />
     <Compile Include="Extension\v6\AMcmExtension.cs" />
     <Compile Include="Extension\v6\AMcmExtensionWithConfiguration.cs" />
