--- a/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
+++ b/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Dto\v5\ObjectTest.cs" />
     <Compile Include="EmailServiceExtensionsTest.cs" />
     <Compile Include="Extension\TestBase.cs" />
     <Compile Include="Extension\v5\DownloadTest.cs" />
@@ -86,9 +87,7 @@
     <Compile Include="TestBase.cs" />
     <Compile Include="View\ObjectIndexTest.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Data\Dto\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.Config.sample" />
     <None Include="App.Config" />
