Added index: LARM-radio-udsendelse_tags_stringmv to LARM Radio project Added test method

--- a/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
+++ b/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Index\DKAIndexableFieldsTest.cs" />
+    <Compile Include="Index\LARMIndexTest.cs" />
     <Compile Include="Module\FolderModuleTest.cs" />
     <Compile Include="Permission\InMemoryPermissionManagerTest.cs" />
     <Compile Include="Permission\IntervalSpecificationTest.cs" />
