Updated Dependencies and changed them to be updatable via nuget

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\src\app\CHAOS.MCM\packages.config" />
   <repository path="..\src\app\Chaos.Portal.Core\packages.config" />
   <repository path="..\src\app\Chaos.Portal\packages.config" />
+  <repository path="..\src\test\CHAOS.MCM.Test\packages.config" />
   <repository path="..\src\test\Chaos.Portal.IntegrationTest\packages.config" />
   <repository path="..\src\test\Chaos.Portal.Test\packages.config" />
 </repositories>
