--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -33,9 +33,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AWSSDK, Version=1.5.5.1, Culture=neutral, PublicKeyToken=cd2d24cd2bace800, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\lib\AWSSDK.dll</HintPath>
+    <Reference Include="AWSSDK">
+      <HintPath>..\..\..\packages\AWSSDK.2.3.24.3\lib\net45\AWSSDK.dll</HintPath>
     </Reference>
     <Reference Include="CHAOS, Version=1.0.4687.26568, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -175,6 +174,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config.sample" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Binding\" />
