--- a/src/app/Chaos.Mcm.Indexer/Chaos.Mcm.Indexer.csproj
+++ b/src/app/Chaos.Mcm.Indexer/Chaos.Mcm.Indexer.csproj
@@ -36,10 +36,10 @@
       <HintPath>..\..\..\lib\Chaos.Portal.dll</HintPath>
     </Reference>
     <Reference Include="Couchbase">
-      <HintPath>..\..\..\lib\Couchbase.dll</HintPath>
+      <HintPath>..\..\..\packages\CouchbaseNetClient.1.3.9\lib\net40\Couchbase.dll</HintPath>
     </Reference>
     <Reference Include="Enyim.Caching">
-      <HintPath>..\..\..\lib\Enyim.Caching.dll</HintPath>
+      <HintPath>..\..\..\packages\CouchbaseNetClient.1.3.9\lib\net40\Enyim.Caching.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
