Change MetadataSchema so it is no longer dependant on XML, but can contain both XML, JSON or any other formatted as a String

--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Data\Dto\v5\ObjectAccessPoint.cs" />
     <Compile Include="Data\IFileRepository.cs" />
     <Compile Include="Data\IMcmRepository.cs" />
+    <Compile Include="Data\IMetadataSchemaGateway.cs" />
     <Compile Include="Data\Mapping\AccessPointMapping.cs" />
     <Compile Include="Data\Mapping\AccesspointObjectJoinMapping.cs" />
     <Compile Include="Data\Mapping\DestinationInfoMapping.cs" />
