Add UserIds to Project on Project?Get

--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Data\Mapping\ObjectMetadataMapping.cs" />
     <Compile Include="Data\Mapping\ObjectRelationInfoMapping.cs" />
     <Compile Include="Data\Mapping\ObjectTypeMapping.cs" />
+    <Compile Include="Data\Mapping\ProjectMapping.cs" />
     <Compile Include="Data\McmRepository.cs" />
     <Compile Include="Data\MySql\FileRepository.cs" />
     <Compile Include="Data\MySql\LabelRepository.cs" />
